# misuco2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  misuco2.pro  misuco2.pro.user.3.2-pre1  misuco2.pro.user.78e6841  misuco2.pro.user.d7c1e76  qml.qrc
.github/workflows/: android-qt-android.yml
android/: AndroidManifest.xml  gradle.properties  gradlew.bat
app/: heartbeat.cpp  heartbeat.h  misuco2.cpp  misuco2.h  xmlloader.cpp  xmlloader.h
comm/: isender.h  mastersender.cpp  mastersender.h  senderdebug.cpp  senderdebug.h  sendermobilesynth.cpp  sendermobilesynth.h  sendermulti.cpp  sendermulti.h  senderoscmidigeneric.cpp  senderoscmidigeneric.h  senderoscpuredata.cpp  senderoscpuredata.h  senderoscxy.cpp  senderoscxy.h  senderreaktor.cpp  senderreaktor.h  sendersupercollider.cpp  sendersupercollider.h
comm/libofqf/: qoscclient.cpp  qoscclient.h  qoscclientinterface.h  qoscmsgparser.h  qoscproxy.cpp  qoscproxy.h  qoscproxyinterface.cpp  qoscproxyinterface.h  qoscserver.cpp  qoscserver.h  qoscserverinterface.h  qosctcpclient.cpp  qosctcpclient.h  qosctcpserver.cpp  qosctcpserver.h  qosctcpserverthread.cpp  qosctcpserverthread.h  qosctypes.cpp  qosctypes.h
conf/: color.cpp  color.h  colormacros.h  freqtriple.cpp  freqtriple.h  initxml.h  mglob.cpp  mglob.h  mwplayfield.cpp  mwplayfield.h  pitch.cpp  pitch.h  pitchcolor.cpp  pitchcolor.h  platform.h  playfield.cpp  playfield.h  purchases.h  types.h
ios/: Info.plist
ios/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/Images.xcassets/Brand Assets.launchimage/: Contents.json
lib/misulib/comm/: heartbeat.h  isender.h  mastersender.h  sendermobilesynth.cpp  sendermobilesynth.h  senderoscmidigeneric.cpp  senderoscmidigeneric.h  senderoscpuredata.cpp  senderoscpuredata.h  senderreaktor.cpp  senderreaktor.h  sendersupercollider.cpp  sendersupercollider.h
lib/misulib/comm/libofqf/: qoscclient.cpp  qoscclient.h  qoscmsgparser.cpp  qoscmsgparser.h  qoscserver.cpp  qoscserver.h  qoscserverinterface.h  qosctypes.h
lib/misulib/models/: freqtriple.cpp  pitchcolor.cpp  playfield.cpp  purchases.cpp  types.h
lib/misulib/qml/confareas/: ConfArea.qml  SynthArea.qml  TuneArea.qml
lib/misulib/qml/dialogs/: DialogGame.qml  DialogPreset.qml
lib/misulib/qml/elements/: Fader.qml  RootNoteSetter.qml
lib/misulib/qml/playfield/: PlayArea.qml  PlayFieldBendHori.qml  PlayFieldBendVertBot.qml  PlayFieldBendVertHorizBot.qml  PlayFieldBendVertTop.qml  PlayFieldNormal.qml
lib/misulib/qml/presets/: SynthPresetScroll.qml
lib/misulib/qml/presets/icons/: Envelope.qml  Saw.qml  Square.qml
lib/misulib/widgets/buttons/: octaveshift.h  openarchive.cpp  openarchive.h  toggleheader.cpp  togglemenu.cpp  togglepresets.cpp  togglepresets.h  togglesender.h
lib/misulib/widgets/core/: gamecontrol.h  octaveranger.cpp  playarea.cpp  playarea.h  rootnotesetter.cpp  rootnotesetter.h  scaleswitch.cpp  scaleswitch.h
lib/misulib/widgets/faders/: mwfaderparamctl.h  mwfaderpitch.cpp  mwfaderpitch.h
lib/misulib/widgets/presets/: mwmicrotunepreset.h  mwscalepreset.h  mwsoundpreset.cpp  mwsoundpreset.h  presetcollection.cpp
lib/mobilesynth/: AudioOutput.m
lib/mobilesynth/synth/: controller.cpp  controller.h  envelope.cpp  filter.cpp  key_stack.cpp  key_stack.h  lag_processor.h  oscillator.cpp  oscillator.h  test_util.h
mobilesynth/: mobilesynthqt52.cpp  mobilesynthqt52.h
mobilesynth/mobilesynth/Classes/: AudioOutput.h  mobilesynthViewControllerRc1.h  mobilesynthViewControllerRc1.mm  mobilesynthqt52.cpp  mobilesynthqt52.h  mobilesynthviewcontrollerrc1.hpp
mobilesynth/mobilesynth/Classes/synth/: arpeggio.h  controller.cpp  controller.h  envelope.cpp  envelope.h  filter.cpp  filter.h  key_stack.cpp  key_stack.h  lag_processor.h  oscillator.cpp  oscillator.h
mobilesynth/synth/: arpeggio.cpp  controller.cpp  controller.h  envelope.cpp  envelope.h  filter.h  key_stack.h
models/: freqtriple.cpp  pitchcolor.cpp  playfield.cpp
proc/: noteproc.cpp  noteproc.h
qml/: BScaleSwitch.qml  Button.qml  ConfArea.qml  DialogGame.qml  DialogPreset.qml  Fader.qml  Menu.qml  OctaveRanger.qml  PlayArea.qml  PlayFieldBendHori.qml  PlayFieldBendVertBot.qml  PlayFieldBendVertHorizTop.qml  PlayFieldBendVertTop.qml  PlayFieldNormal.qml  RootNoteSetter.qml  ScalePreset.qml  ScalePresetScroll.qml  ScaleSwitch.qml  SynthArea.qml  SynthPresetScroll.qml  TuneArea.qml  main.qml
qml/icons/: Envelope.qml  Rnd.qml  Saw.qml  Sine.qml  Square.qml  Tri.qml
widgets/: mglob.cpp  mglob.h  misuwidget.cpp  misuwidget.h  mwbasenotesetter.cpp  mwbasenotesetter.h  mwbscaleswitch.cpp  mwbscaleswitch.h  mwfadder.cpp  mwfadder.h  mwfaderparamctl.cpp  mwfaderparamctl.h  mwfaderpitch.cpp  mwfaderpitch.h  mwgame.cpp  mwgame.h  mwheadersetter.cpp  mwheadersetter.h  mwmicrotunepreset.cpp  mwmicrotunepreset.h  mwoctaveranger.cpp  mwoctaveranger.h  mwplayarea.cpp  mwplayarea.h  mwpreset.cpp  mwpreset.h  mwrootnotesetter.cpp  mwrootnotesetter.h  mwscalepreset.cpp  mwscalepreset.h  mwsoundpreset.cpp  mwsoundpreset.h  scaleswitch.cpp  scaleswitch.h  wlayout.cpp  wlayout.h  wnote.cpp  wnote.h
widgets/buttons/: bendhorizontal.cpp  bendhorizontal.h  buttonbase.cpp  buttonbase.h  octaveshift.cpp  openarchive.cpp  openarchive.h  sendcc1.cpp  sendcc1.h  setmainview.cpp  setmainview.h  showfreqs.cpp  showfreqs.h  togglebw.cpp  togglebw.h  toggleheader.h  togglemenu.h  togglepresets.cpp  togglesender.cpp
widgets/core/: gamecontrol.cpp  gamecontrol.h  octaveranger.h  playarea.cpp  playarea.h  rootnotesetter.h  scaleswitch.cpp  scaleswitch.h
widgets/faders/: mwfader.cpp  mwfader.h  mwfaderparamctl.cpp  mwfaderparamctl.h  mwfaderpitch.cpp  mwfaderpitch.h
widgets/presets/: mwmicrotunepreset.cpp  mwmicrotunepreset.h  mwscalepreset.cpp  mwscalepreset.h  mwsoundpreset.cpp  mwsoundpreset.h  presetcollection.cpp  presetcollection.h
xml/: conf.xml  scales.xml  synth.xml  tune.xml
